@@ -266,3 +266,5 @@ Version 1.8.0
 + Added RubySet
 
 - Removed deprecated methods
+
+- Removed newRubyRange
